Only run goreleaser against tags

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,8 +1,10 @@
 name: Go Releaser
 
 on:
-  pull_request:
   push:
+    # run only against tags
+    tags:
+      - '*'
 
 permissions:
   contents: write
