--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -44,9 +44,9 @@ release:
     ### Linux
     ```
     sudo wget https://github.com/A2-ai/devious/releases/download/{{ .Tag }}/dvs_Linux_x86_64.tar.gz -O /tmp/dvs.tar.gz
-    sudo tar xzf /tmp/qvm.tar.gz qvm
-    sudo mv qvm /usr/local/bin/qvm
-    sudo chmod +x /usr/local/bin/qvm
+    sudo tar xzf /tmp/dvs.tar.gz dvs
+    sudo mv dvs /usr/local/bin/dvs
+    sudo chmod +x /usr/local/bin/dvs
     ```
 
     ### Linux (User) 
@@ -54,7 +54,7 @@ release:
 
     ```
     wget https://github.com/A2-ai/devious/releases/download/{{ .Tag }}/dvs_Linux_x86_64.tar.gz -O /tmp/dvs.tar.gz
-    tar xzf /tmp/qvm.tar.gz qvm
-    mv qvm ~/bin/qvm
-    chmod +x ~/bin/qvm
+    tar xzf /tmp/dvs.tar.gz dvs
+    mv dvs ~/bin/dvs
+    chmod +x ~/bin/dvs
     ```
