--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -38,7 +38,7 @@ changelog:
       - "^test:"
 
 release:
-  prerelease: "true"
+  prerelease: auto
   footer: |
     ## Installation
     ### Linux
@@ -53,8 +53,8 @@ release:
     Assumes `~/bin` is available in your PATH
 
     ```
-    wget https://github.com/A2-ai/devious/releases/download/{{ .Tag }}/dvs_Linux_x86_64.tar.gz -O /tmp/dvs.tar.gz
-    tar xzf /tmp/dvs.tar.gz dvs
-    mv dvs ~/bin/dvs
-    chmod +x ~/bin/dvs
+    wget https://github.com/A2-ai/devious/releases/download/{{ .Tag }}/dvs_Linux_x86_64.tar.gz -O ~/dvs.tar.gz
+    tar xzf ~/dvs.tar.gz dvs
+    mv dvs ~/.local/bin/dvs
+    chmod +x ~/.local/bin/dvs
     ```
