Add missing download link

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -52,5 +52,5 @@ release:
     ### Linux (User)
     This will download and run a script that adds ~/.local/bin to your PATH and installs dvs there.
     ```
-    curl -o- https://raw.githubusercontent.com/A2-ai/devious/main/scripts/install_user.sh | bash
+    curl -o- https://raw.githubusercontent.com/A2-ai/devious/main/scripts/install_user.sh | bash -s https://github.com/A2-ai/devious/releases/download/{{ .Tag }}/dvs_Linux_x86_64.tar.gz
     ```
