--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,6 +11,8 @@ builds:
       - linux
       - windows
       - darwin
+  - ldflags:
+      - -X dvs/cmd.Version={{.Version}}
 
 archives:
   - format: tar.gz
