--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -11,7 +11,7 @@ builds:
       - linux
       - windows
       - darwin
-  - ldflags:
+    ldflags:
       - -X dvs/cmd.Version={{.Version}}
 
 archives:
