--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 # Go workspace file
 go.work
 
-# Build file
+# Binaries
 dvs
 
-# Test environment
-dvs.yaml
-testenv/
+# Devious entry
+/testing/266-536x354.jpg
+
+# Devious entry
+/testing/10G
+
+# Devious entry
+/testing/1G
+
+# Devious entry
+/testing/571-536x354.jpg
