Remove devious config from self

--- a/.gitignore
+++ b/.gitignore
@@ -4,14 +4,6 @@ go.work
 # Binaries
 dvs
 
-# Devious entry
-/testing/266-536x354.jpg
-
-# Devious entry
-/testing/10G
-
-# Devious entry
-/testing/1G
-
-# Devious entry
-/testing/571-536x354.jpg
+# Testings
+testing/storage/
+testing/environment/
